Name:              cryptol-saw-core
Version:           0.1
Author:            Galois, Inc.
License:           BSD3
License-file:      LICENSE
Maintainer:        huffman@galois.com
Copyright:         (c) 2014 Galois Inc.
Build-type:        Simple
cabal-version:     >= 1.10
Category:          Formal Methods
Synopsis:          Representing Cryptol in SAWCore
Description:
  Translate Cryptol syntax into SAWCore terms, which can then
  be analysed by various backend proof systems.

extra-source-files:
    saw/Cryptol.sawcore
    saw/SpecM.sawcore
    saw/CryptolM.sawcore

library
  build-depends:

    -- upstream packages from hackage
    base,
    base-compat,
    array,
    bytestring,
    containers,
    data-inttrie >= 0.1.4,
    executable-path,
    filepath,
    integer-gmp,
    modern-uri,
    mtl,
    panic,
    sbv,
    template-haskell,
    unordered-containers,
    text,
    vector,

    -- packages in git submodules
    aig,
    cryptol >= 2.3.0,
    what4,

    -- internal subpackages in the saw tree
    saw-core,
    saw-core-aig,
    saw-core-sbv,
    saw-core-what4

  hs-source-dirs: src
  exposed-modules:
     Verifier.SAW.Cryptol
     Verifier.SAW.Cryptol.Panic
     Verifier.SAW.Cryptol.Prelude
     Verifier.SAW.Cryptol.PreludeM
     Verifier.SAW.Cryptol.Simpset
     Verifier.SAW.Cryptol.Monadify
     Verifier.SAW.CryptolEnv
     Verifier.SAW.TypedTerm
  -- GHC-options: -Wall -Werror
  GHC-options: -Wall

executable css
  other-modules:
    Paths_cryptol_saw_core

  build-depends:

    -- upstream packages from hackage
    base >= 4.5,
    array,
    bytestring,
    containers,
    text,

    -- packages in git submodules
    aig,
    cryptol,

    -- internal subpackages in the saw tree
    cryptol-saw-core,
    saw-core,
    saw-core-aig

  hs-source-dirs : css
  main-is : Main.hs
  GHC-options: -Wall -O2 -threaded -rtsopts -pgmlc++
  extra-libraries:      stdc++

test-suite cryptol-saw-core-tc-test
  type: exitcode-stdio-1.0
  default-language: Haskell2010

  hs-source-dirs: test
  main-is: CryptolVerifierTC.hs

  build-depends:

    -- upstream packages from hackage
    base,
    bytestring,
    containers,
    heredoc >= 0.2,
    text,

    -- packages in git submodules
    cryptol,

    -- internal subpackages in the saw tree
    cryptol-saw-core,
    saw-core

  GHC-options: -threaded
