cabal-version:      2.4
Name:               heapster-saw
Version:            0.1
License:            BSD-3-Clause
License-file:       LICENSE
Author:             Galois, Inc.
Maintainer:         westbrook@galois.com
Copyright:          (c) 2020 Galois Inc.
Category:           Formal Methods
Build-type:         Simple
Synopsis:           Program verification in SAW using Heapster
Description:
  A type system for binaries based on separation logic, along with a translation
  from well-typed programs into pure monadic SAW core programs

library
  build-depends:

    -- upstream packages from hackage
    base == 4.*,
    aeson >= 1.5 && < 2.3,
    array ^>= 0.5.3,
    bytestring,
    containers,
    extra,
    filepath,
    lens,
    mtl,
    pretty,
    prettyprinter >= 1.7.0,
    reflection,
    text,
    template-haskell,
    th-abstraction,
    transformers,
    vector,

    -- galois packages from hackage
    bv-sized,

    -- packages in git submodules
    -- (hobbits is for now actually a source-repository-package)
    crucible,
    crucible-llvm,
    hobbits ^>= 1.4,
    language-rust,
    llvm-pretty >= 0.8,
    parameterized-utils,
    what4,

    -- internal subpackages in the saw tree
    saw-core

  hs-source-dirs: src
  build-tool-depends:
    alex:alex,
    happy:happy,
  exposed-modules:
    Verifier.SAW.Heapster.CruUtil
    Verifier.SAW.Heapster.GenMonad
    Verifier.SAW.Heapster.IDESupport
    Verifier.SAW.Heapster.HintExtract
    Verifier.SAW.Heapster.Implication
    Verifier.SAW.Heapster.Lexer
    Verifier.SAW.Heapster.LLVMGlobalConst
    Verifier.SAW.Heapster.Located
    Verifier.SAW.Heapster.NamedMb
    Verifier.SAW.Heapster.JSONExport
    Verifier.SAW.Heapster.ParsedCtx
    Verifier.SAW.Heapster.Parser
    Verifier.SAW.Heapster.Permissions
    Verifier.SAW.Heapster.PermParser
    Verifier.SAW.Heapster.NamePropagation
    Verifier.SAW.Heapster.RustTypes
    Verifier.SAW.Heapster.SAWTranslation
    Verifier.SAW.Heapster.Token
    Verifier.SAW.Heapster.TypeChecker
    Verifier.SAW.Heapster.TypedCrucible
    Verifier.SAW.Heapster.UntypedAST
    Verifier.SAW.Heapster.Widening
  other-modules:
    Verifier.SAW.Heapster.PatternMatchUtil
  GHC-options: -Wall
  default-language: Haskell2010

test-suite prover_tests
  type: exitcode-stdio-1.0
  hs-source-dirs: proverTests

  ghc-options: -Wall -threaded
  default-language: Haskell2010

  main-is: Main.hs

  build-depends:
                 -- upstream packages from hackage
                 base
               , directory
               , filemanip
               , filepath
               , process
               , tasty
               , tasty-hunit
               , tasty-expected-failure

                 -- packages in git submodules
                 -- (hobbits is for now actually a source-repository-package)
               , crucible
               , crucible-llvm
               , hobbits ^>= 1.4

                 -- this package's own library
               , heapster-saw
