Name:               saw-core-aig
Version:            0.1
License:            BSD3
License-file:       LICENSE
Author:             Galois, Inc.
Maintainer:         huffman@galois.com
Copyright:          (c) 2012-2016 Galois Inc.
Category:           Formal Methods
Build-type:         Simple
cabal-version:      >= 1.8
Synopsis:           SAWCore backend for AIGs
Description:
  A backend for symbolically evaluating terms in the SAWCore
  intermediate language using the aig library to generate And-Inverter
  Graphs (AIGs).

library
  build-depends:
    aig,
    base == 4.*,
    containers,
    saw-core,
    text,
    vector
  hs-source-dirs: src
  exposed-modules:
     Verifier.SAW.Simulator.BitBlast
  GHC-options: -Wall -Werror
  if impl(ghc == 8.0.1)
    ghc-options: -Wno-redundant-constraints
