name:               saw-core-coq
version:            0.1
license:            BSD3
license-file:       LICENSE
author:             Galois, Inc.
maintainer:         atomb@galois.com
copyright:          (c) 2018 Galois Inc.
category:           Formal Methods
build-type:         Simple
cabal-version:      >= 1.8
synopsis:           SAWCore backend for Coq
description:
  A backend for translating terms in the SAWCore intermediate language
  into the syntax of Coq

library
  build-depends:

    -- upstream packages from hackage
    base == 4.*,
    containers,
    interpolate,
    lens,
    mtl,
    prettyprinter,
    text,
    vector,
    zenc,

    -- galois packages from hackage
    bv-sized,

    -- packages in git submodules
    cryptol,
    parameterized-utils,

    -- internal subpackages in the saw tree
    cryptol-saw-core,
    saw-core

  hs-source-dirs: src
  exposed-modules:
     Language.Coq.AST
     Language.Coq.Pretty
     Verifier.SAW.Translation.Coq
     Verifier.SAW.Translation.Coq.CryptolModule
     Verifier.SAW.Translation.Coq.SAWModule
     Verifier.SAW.Translation.Coq.Monad
     Verifier.SAW.Translation.Coq.Term
     Verifier.SAW.Translation.Coq.SpecialTreatment
  ghc-options: -Wall -Werror
