Name:               saw-core-sbv
Version:            0.1
License:            BSD3
License-file:       LICENSE
Author:             Galois, Inc.
Maintainer:         huffman@galois.com
Copyright:          (c) 2012-2016 Galois Inc.
Category:           Formal Methods
Build-type:         Simple
cabal-version:      >= 1.8
Synopsis:           SAWCore backend for SBV
Description:
  A backend for symbolically evaluating terms in the SAWCore
  intermediate language using the SBV library to generate SMT-Lib.

library
  build-depends:
    base == 4.*,
    containers,
    lens,
    mtl,
    saw-core,
    sbv >= 8.0,
    text,
    transformers,
    vector
  hs-source-dirs: src
  exposed-modules:
     Verifier.SAW.Simulator.SBV
     Verifier.SAW.Simulator.SBV.SWord
  GHC-options: -Wall -Werror -Wcompat
