Name:               saw-core
Version:            0.1
License:            BSD3
License-file:       LICENSE
Author:             Galois, Inc.
Maintainer:         huffman@galois.com
Copyright:          (c) 2012-2016 Galois Inc.
Category:           Formal Methods
Build-type:         Simple
cabal-version:      >= 1.8
Synopsis:           SAWCore intermediate language
Description:
  The implementation of the SAWCore intermediate language,
  used by LSS, JSS, and SAWScript

extra-source-files:
    prelude/Prelude.sawcore
    src/Verifier/SAW/Grammar.y
    src/Verifier/SAW/Lexer.x

library
  build-tools:
    alex >= 3.1.3,
    happy >= 1.9.6

  build-depends:
    base == 4.*,
    array,
    bytestring,
    containers,
    data-inttrie,
    data-ref,
    directory,
    filepath,
    hashable >= 1.2,
    lens >= 3.8,
    modern-uri >= 0.3.2 && < 0.4,
    MonadRandom,
    mtl,
    panic,
    parameterized-utils,
    pretty,
    prettyprinter >= 1.7.0,
    prettyprinter-ansi-terminal >= 1.1.2,
    random,
    rme,
    template-haskell,
    text,
    th-lift-instances,
    tf-random,
    transformers,
    transformers-compat,
    unordered-containers,
    utf8-string,
    vector
  hs-source-dirs: src
  exposed-modules:
     Verifier.SAW
     Verifier.SAW.Constant
     Verifier.SAW.ExternalFormat
     Verifier.SAW.Conversion
     Verifier.SAW.Cache
     Verifier.SAW.FiniteValue
     Verifier.SAW.Grammar
     Verifier.SAW.Lexer
     Verifier.SAW.Module
     Verifier.SAW.Name
     Verifier.SAW.ParserUtils
     Verifier.SAW.Position
     Verifier.SAW.Prelude
     Verifier.SAW.Prelude.Constants
     Verifier.SAW.Prim
     Verifier.SAW.Recognizer
     Verifier.SAW.Rewriter
     Verifier.SAW.SATQuery
     Verifier.SAW.SCTypeCheck
     Verifier.SAW.Simulator
     Verifier.SAW.Simulator.Concrete
     Verifier.SAW.Simulator.TermModel
     Verifier.SAW.Simulator.MonadLazy
     Verifier.SAW.Simulator.Prims
     Verifier.SAW.Simulator.RME
     Verifier.SAW.Simulator.Value
     Verifier.SAW.SharedTerm
     Verifier.SAW.Term.Functor
     Verifier.SAW.Term.CtxTerm
     Verifier.SAW.OpenTerm
     Verifier.SAW.Term.Pretty
     Verifier.SAW.TermNet
     Verifier.SAW.Testing.Random
     Verifier.SAW.Typechecker
     Verifier.SAW.TypedAST
     Verifier.SAW.Unique
     Verifier.SAW.UntypedAST
     Verifier.SAW.Change
     Verifier.SAW.Utils
  other-modules:
     Verifier.SAW.UnionFind

  GHC-options: -Wall -Werror -Wcompat
  if impl(ghc == 8.0.1)
    ghc-options: -Wno-redundant-constraints
  GHC-prof-options: -fprof-auto -fprof-cafs
  extensions:
    DeriveFunctor
    GeneralizedNewtypeDeriving
    ImplicitParams
    ViewPatterns

test-suite test-sawcore
  type: exitcode-stdio-1.0
  GHC-options: -Wall -Werror -Wcompat
  main-is: Tests.hs
  hs-source-dirs: tests/src
  build-depends:
      base >= 4
    , containers
    , data-ref
    , hashable
    , lens
    , mtl
    , saw-core
    , time
    , unordered-containers
    , vector
    , QuickCheck >= 2.7
    , tasty
    , tasty-ant-xml >= 1.1.0
    , tasty-hunit
    , tasty-quickcheck
    , tagged

  other-modules:
    Tests.CacheTests
    Tests.Parser
    Tests.Rewriter
    Tests.SharedTerm

executable extcore-info
  main-is: extcore-info.hs
  hs-source-dirs: tools
  build-depends:
      base >= 4
    , saw-core
