cabal-version: 3.0
name: saw-lsp
version: 0.1.0.0
license: NONE
author: Sam Cowger
maintainer: sam@galois.com
category: Development

-- synopsis:
-- description:
-- homepage:
-- bug-reports:
-- copyright:


common common
    build-depends:
        base ^>=4.16.4.0

    default-extensions:
        DataKinds
        ImportQualifiedPost
        OverloadedStrings
        RecordWildCards

    default-language: Haskell2010

    ghc-options: 
        -Wall
        -Wextra
        -Wunused-top-binds
        -fno-safe-haskell
        -haddock
        -O0


library
    import: common

    exposed-modules:
        Handlers
        Handlers.Custom.InterpretToPoint
        Handlers.Initialized
        Handlers.TextDocument.DidChange
        Handlers.TextDocument.DidOpen
        Handlers.TextDocument.DidSave
        Handlers.TextDocument.SemanticTokensFull

        Monad
        Reactor
        REPL
        Sample
        -- Sandbox.DummyHandlers
        -- Sandbox.LSP
        SAW
        SAWLib
        Server
        Worker

    build-depends:
        -- local
        -- cryptol-syntax,
        saw-script,
        saw,
        -- saw-syntax,

        -- hackage
        aeson ^>=2.0.3.0,
        co-log ^>=0.5.0.0,
        containers ^>=0.6.4.1,
        directory ^>=1.3.6.2,
        exceptions ^>= 0.10.4,
        haskeline ^>=0.8.2,
        lens ^>=5.1.1,
        lsp ^>=1.6.0.0,
        mtl ^>=2.2.2,
        prettyprinter ^>=1.7.1,
        process ^>= 1.6.16.0,
        stm ^>=2.5.0.2,
        temporary ^>=1.3,
        text ^>=1.2.5.0,
        time ^>=1.11.1.1,
        unliftio-core ^>=0.2.1.0

    hs-source-dirs: src


executable saw-lsp
    import: common

    main-is: Main.hs

    build-depends:
        saw-lsp

    hs-source-dirs: app
    default-language: Haskell2010


test-suite saw-lsp-test
    import: common

    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: MyLibTest.hs

