cabal-version: 3.0
name: saw-lsp
version: 0.1.0.0
license: NONE
author: Sam Cowger
maintainer: sam@galois.com
category: Development

-- synopsis:
-- description:
-- homepage:
-- bug-reports:
-- copyright:


common common
    build-depends:
        base ^>=4.16.4.0

    default-extensions:
        DataKinds
        ImportQualifiedPost
        OverloadedStrings
        RecordWildCards

    default-language: Haskell2010

    ghc-options: 
        -Wall
        -Wextra
        -Wunused-top-binds
        -fno-safe-haskell
        -haddock
        -O0


library
    import: common

    exposed-modules:
        Handlers
        Handlers.Custom.InterpretToPoint
        Handlers.Custom.InterpretToPoint.Truncate
        Handlers.Initialized
        Handlers.TextDocument.DidChange
        Handlers.TextDocument.DidOpen
        Handlers.TextDocument.DidSave
        Handlers.TextDocument.SemanticTokensFull

        Logging

        Message

        Responder

        SAWT.Checkpoint
        SAWT.Monad

        Server
        Server.Config
        Server.Monad
        Server.Reactor

        Util.FList
        Util.Stack

        Worker
        WorkerGovernor

        Sample

    build-depends:
        saw-script,
        aeson ^>=2.1.2.1,
        aig ^>=0.2.6,
        -- co-log ^>=0.5.0.0,
        containers ^>=0.6.5.1,
        -- directory ^>=1.3.6.2,
        exceptions ^>= 0.10.4,
        hashable ^>=1.4.2.0,
        -- haskeline ^>=0.8.2,
        hslogger ^>=1.3.1.0,
        lens ^>=5.2.2,
        lsp ^>=1.6.0.0,
        lsp-types ^>=1.6.0.0,
        mtl ^>=2.2.2,
        -- prettyprinter ^>=1.7.1,
        process ^>= 1.6.16.0,
        -- simple-smt ^>=0.9.7,
        stm ^>=2.5.0.2,
        temporary ^>=1.3,
        text ^>=1.2.5.0,
        -- time ^>=1.11.1.1,
        unliftio-core ^>=0.2.1.0,
        unordered-containers ^>=0.2.19.1,
        uuid ^>=1.3.15

    hs-source-dirs: src


executable saw-lsp
    import: common

    main-is: Main.hs

    build-depends:
        saw-lsp,
        simple-smt ^>=0.9.7

    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options:
        -- Not in the common stanza because -threaded doesn't apply to libraries
        -threaded


test-suite saw-lsp-test
    import: common

    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs

    other-modules:
        Test.SAWT.Interpret
        Test.Util.FList
        Test.Util.Stack

    build-depends:
        saw-lsp,
        saw-script,
        hashable ^>=1.4.2.0,
        QuickCheck ^>=2.14.2,
        tasty ^>=1.4.3,
        tasty-hunit ^>=0.10.0.3,
        tasty-quickcheck ^>=0.10.2

    ghc-options:
        -threaded
        -- +RTS -N1 -RTS
