[tool.poetry]
name = "saw-client"
version = "1.4.0.99"
readme = "README.md"
description = "SAW client for the SAW RPC server"
authors = ["Galois, Inc. <saw@galois.com>"]
license = "BSD License"
include = [
    "LICENSE",
    "mypy.ini",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
BitVector = "^3.4.9"
cryptol = "3.3" # { path = "../deps/cryptol/cryptol-remote-api/python/", develop = true }
argo-client = ">=0.0.13"
lmdb = "^1.6.2"
cbor2 = "^5.4.6"
python-dateutil = "^2.8.2"
# Add a fake dep on urllib3 (we don't directly depend on it but
# some of the above packages do) to add a constraint for a security
# issue.
urllib3 = ">=2.5.0"

[tool.poetry.dev-dependencies]
mypy = "^1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
