name:                haskell-example
version:             0.1.0.0
license:             BSD3
author:              Aaron Tomb
maintainer:          atomb@galois.com
build-type:          Simple
cabal-version:       >=1.10

executable haskell-script
  main-is:             dotprod_struct.hs
  build-depends:       base >=4.11 && <4.12
                     , abcBridge
                     , saw-script
  default-language:    Haskell2010
