[tool.poetry]
name = "saw-client"
version = "1.3.0.99"
readme = "README.md"
description = "SAW client for the SAW RPC server"
authors = ["Galois, Inc. <saw@galois.com>"]
license = "BSD License"
include = [
    "LICENSE",
    "mypy.ini",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
BitVector = "^3.4.9"
cryptol = "3.3" # { path = "../../deps/cryptol/cryptol-remote-api/python/", develop = true }
argo-client = ">=0.0.13"
lmdb = "^1.6.2"
cbor2 = "^5.4.6"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
mypy = "^1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
